[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["NOOR OMARI <nooromari847@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
